--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,29 @@ margin-top: 10px;
     font-size: small;
 }
 /* KRAJ SEKCIJE ZA NOVI PROIZBOD SEKCIJU */
+.o-nama{
+    
+    background-color: rgb(202, 226, 234);
+    max-width: 1000px;
+    margin: 50px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-radius: 30px 0 0 30px;
+    box-shadow: 4px 4px 10px rgb(21, 21, 21, 0.2);
+}
+
+
+.o-nama-slika img{
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 30px 30px 30px 30px;
+}
+.o-nama-sadrzaj{
+    padding: 50px;
+}
+.o-nama h2{
+    font-family: "Dancing Script", cursive;
+    padding-bottom: 50px;
+    color: #f73abe;
+}
