--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -8,14 +8,17 @@ h2{
     margin-bottom: 15px;
 }
 .kontaktformasekcija{
-   
-   background: url(https://static.vecteezy.com/system/resources/thumbnails/019/859/733/small/seamless-pattern-of-melted-strawberry-pink-cream-dripping-dessert-background-with-melted-strawberry-pink-cream-banner-seamless-pattern-transparent-background-illustration-png.png)no-repeat center/cover;
-    display: flex;
+background-image: url("https://i.pinimg.com/736x/e6/ba/88/e6ba88313a90fae2888f3b38dff1fde5.jpg");   
+ background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; 
+display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding: 50px;
+    font-weight: bolder;
 }
 input, textarea{
     padding: 15px;
