--- a/css/nav.css
+++ b/css/nav.css
@@ -32,3 +32,74 @@ nav a{
 .logoslika{
     height: 80px;
 }
+/* hamburger meni */
+ #menu-toggle{
+    display: none;
+ } 
+ .hamburger{
+    display: none;
+ }
+
+ @media(max-width: 768px){
+    .ukusi-grid{
+        grid-template-columns: 1fr;
+        justify-content: center;
+        text-align: center;
+        align-self: center;
+    }
+    .ukus-box img{
+        width: 150px;
+        height: 150px;
+    }
+    .stiker{
+        left: 20px;
+    }
+    .o-nama{
+        grid-template-columns: 1fr;
+    }
+    .preporuke-grid{
+        grid-template-columns: 1fr;
+    }
+    .zvezdice{
+        font-size: 15pxS;
+    }
+    .zasto-grid{
+        grid-template-columns: 1fr;
+    }
+    .slika{
+        display: none;
+    }
+     nav ul.nav-links {
+        display: none;
+    }
+
+    nav input[type="checkbox"]:checked ~ ul.nav-links {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background-color: #fff;
+        width: 100%;
+        padding: 10px 0;
+        z-index: 10;
+    }
+
+    .hamburger {
+        display: block;
+        font-size: 2em;
+        cursor: pointer;
+    }
+ }
+  @media(max-width: 1024px){
+    .ukusi-grid{
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        text-align: center;
+        align-self: center;
+    }
+    .ukus-box img{
+        width: 150px;
+        height: 150px;
+    }
+ } 
