--- a/css/korpa.css
+++ b/css/korpa.css
@@ -53,3 +53,19 @@ input{
     border: 1px solid #ccc;
     padding: 5px;
 }
+@media(max-width:768px){
+    table,thead,tbody,th,td,tr{
+        display: block;
+        width: 100%;
+        border: none;
+
+    }
+    tr{
+        border: 2px solid #ccc;
+        border-radius: 5px;
+        margin: 10px 0;
+    }
+    thead{
+        display: none;
+    }
+}
