--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ margin-top: 10px;
  .preporuke{
     background-color:  rgb(255, 210, 217);
     margin: 50px auto;
-    padding: 50px 300px;
+    padding: 50px 10%;
  }
  .preporuke h2{
     font-family: "Dancing Script", cursive;
